--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-svg": "^12.1.1",
+    "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
