--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "native-base": "^3.4.25",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-animated-scroll-indicators": "^1.0.1",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-image-picker": "^4.10.3",
     "react-native-reanimated": "^2.13.0",
