--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "react-native-gesture-handler": "^2.8.0",
     "react-native-image-picker": "^4.10.3",
     "react-native-reanimated": "^2.13.0",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-svg": "^12.1.1",
     "react-native-toast-message": "^2.1.5",
+    "react-native-track-player": "^3.2.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
