--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-animated-scroll-indicators": "^1.0.1",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-image-picker": "^4.10.3",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^2.13.0",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.4.1",
